# nix-test-runner

./: Cargo.toml  LICENSE  README.md  default.nix  example.nix  examplePassed.nix
examples/: failing.nix  runTests.nix
nix/: sources.json
src/: lib.rs  main.rs  runTest.nix
