[package]
name = "nix-test-runner"
version = "0.1.0"
authors = ["Stoeffel <schtoeffel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
junit-report = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "1.9.0"
