[package]
name = "nix-test-runner"
version = "0.1.3"
authors = ["Stoeffel <schtoeffel@gmail.com>"]
edition = "2018"
license = "BSD-2-Clause"
description = "Cli for running nix expression tests"
[[bin]]
name = "nix-test"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
junit-report = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "1.9.0"
