[package]
name = "nix-test-runner"
version = "0.4.2"
authors = ["Stoeffel <schtoeffel@gmail.com>"]
edition = "2018"
license = "BSD-2-Clause"
description = "Cli for running nix expression tests"
readme = "README.md"
repository = "https://github.com/stoeffel/nix-test-runner"
[[bin]]
name = "nix-test"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
colored = "1.9.0"
diff = "0.1.12"
failure = "0.1.6"
failure_derive = "0.1.6"
itertools = "0.8.2"
junit-report = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termize = "0.1.1"
